--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Index HTML in the house</h1>
+        <p>Hello I am a change for git to notice</p>
         <script src=bundle.js></script>
     </body>
 </html>
