--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <body>
         <h1>Index HTML in the house</h1>
         <p>Hello I am a change for git to notice</p>
+        <h1>Users</h1>
+        <table>
+            <thead>
+                <th>&nbsp;</th>
+                <th>userId</th>
+                <th>userName</th>
+            </thead>
+            <tbody id="users">
+            </tbody>
+        </table>
         <script src=bundle.js></script>
     </body>
 </html>
