--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
             <thead>
                 <th>&nbsp;</th>
                 <th>userId</th>
-                <th>userName</th>
+                <th>first name</th>
+                <th>last name</th>
+                <th>email</th>
             </thead>
             <tbody id="users">
             </tbody>
