--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Index HTML in the house</h1>
         <p>Hello I am a change for git to notice</p>
+        <div id="litHtmlAnchor"></div>
         <h1>Users</h1>
         <table>
             <thead>
