--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-
+  <div class="keys">
+    <div id="litHtmlAnchor"></div>  
+  </div>
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
@@ -50,7 +52,7 @@
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
   <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" class="boom"></audio>
+  <audio data-key="71" src="sounds/boom.wav"></audio>
   <audio data-key="72" src="sounds/ride.wav"></audio>
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
