all keys are rendering with lit-html but syntax is odd and the JS is not all being picked up

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <div class="keys">
+  <div class="keys" id="litHere">
     <div id="litHtmlAnchor"></div>  
   </div>
   <div class="keys">
